--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=10e8c5e51e602cb7788de846364fca9e&libraries=services"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=10e8c5e51e602cb7788de846364fca9e&libraries=services,clusterer,drawing"
     ></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
