--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=10e8c5e51e602cb7788de846364fca9e&libraries=services,clusterer,drawing"
     ></script>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/new_favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
